--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans" />
+
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
